--- a/index.html
+++ b/index.html
@@ -49,6 +49,16 @@
                 </div>
             </div>
         </div>
+        <div id="score" style="display: none">
+            <div class="row">
+                <div class="col-sm text-center">
+                    <h2>All Done!</h2>
+                    <p>Correct Answers: <span id="correct">0</span></p>
+                    <p>Incorrect Answers: <span id="incorrect">0</span></p>
+                    <p>Unanswered: <span id="unanswered">0</span></p>
+                </div>
+            </div>
+        </div>
 
     </div>
 
