--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
         </div>
 
-        <div id="game" class="invisible">
+        <div id="game" style="display: none">
             <div class="row">
                 <div class="col-sm text-center">
                     <p>Time Remaining: <span id="timer">30</span> seconds</p>
