--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch"
+        rel="stylesheet">
     <link
         href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         rel="stylesheet"
@@ -15,14 +17,14 @@
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
     <script src="assets/javascript/app.js"></script>
-    <title>Trivia Game</title>
+    <title>Computer and Internet Trivia Game</title>
 </head>
 <body>
     <div class="container">
         <div class="row">
             <div class="col-sm text-center">
                 <header>
-                    <h1>Trivia Game</h1>
+                    <h1>Computer and Internet Trivia Game</h1>
                 </header>
             </div>
         </div>
