vary the ending message depending on whether the user clicked Finish

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div id="score" style="display: none">
             <div class="row">
                 <div class="col-sm text-center">
-                    <h2>All Done!</h2>
+                    <h2 id="endMessage">Time's Up!</h2>
                     <p>Correct Answers: <span id="correct">0</span></p>
                     <p>Incorrect Answers: <span id="incorrect">0</span></p>
                     <p>Unanswered: <span id="unanswered">0</span></p>
